{
    "name": "Custom_Inputs",
    "maps": [
        {
            "name": "Player",
            "id": "f81dd9a6-f65f-49cd-892b-55a9502e285d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b5b6d06c-a54c-4843-8851-62d9f36f4eb6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "91191b22-d6e7-402d-8d89-94ae5cceca45",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Value",
                    "id": "b597bd50-558e-44b3-b114-1bbd5c0809b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeWeapon",
                    "type": "Button",
                    "id": "295ebb96-83ea-4bcb-8d92-7f1e7ac1a695",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "EscButton",
                    "type": "Button",
                    "id": "ef151fb3-ad6b-446f-a060-571615cb410e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftButton",
                    "type": "Button",
                    "id": "3dad2cd4-d3e2-439d-a054-96341209dd66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractButton",
                    "type": "Button",
                    "id": "e0b94846-13ee-456a-b0ce-e2a85f55450a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "dfe8ba6a-e955-41f1-845c-63850c0ba30f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b30e7caf-1a25-4b95-a3c7-628afccd759a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "54466cab-324c-450b-80c6-1cb2e0727872",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "34c5041b-d57a-4dd8-b0ec-600311e4efac",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b8cccc16-d476-4567-984c-39d6540c4a42",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "23ec6cf6-1bd5-4c9a-a2ea-be9619a81a6f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "685fb2d4-e5a1-496e-882c-f12b5457eac5",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b476e2ee-a4d0-442d-a981-64e55c626afc",
                    "path": "<Keyboard>/#(F)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a33909a-226b-4fdb-bad9-c4bc24a5d734",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "EscButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f738cb0f-d8e7-4528-8af6-919d5bccd74b",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "ShiftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c351d2be-95f3-417b-a0e0-c23be8e8b15d",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Custom Control",
                    "action": "InteractButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Custom Control",
            "bindingGroup": "Custom Control",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}